--- a/mnk-game/public/index.html
+++ b/mnk-game/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon"href="./logo.png" />
     <link
   href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap"
   rel="stylesheet"
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>m-n-k game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
